<resources>
    <string name="app_name">Olympics "My Country"</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_medal_tally" translatable="false">Medal Tally</string>
    <string name="title_activity_medal_tally_by_org" translatable="false">Medal Breakdown For Country</string>
    <string name="title_activity_athlete" translatable="false">Players</string>
    <string name="event_refresh" translatable="false">Refresh Event</string>
    <string name="rank_str" translatable="false"><b>Rank</b> %1$s %2$s %3$s</string>
    <string name="medal_total_str" translatable="false">medal total</string>
    <string name="header_title_athName" translatable="false">Athlete</string>
    <string name="number_rounds" translatable="false">Number of rounds</string>
    <string name="score_txt" translatable="false">Score</string>
    <string name="outcome_txt" translatable="false">Outcome</string>
    <string name="cancel" translatable="false">Cancel</string>

    <string name="current_rank" translatable="false">Rank</string>
    <string name="id_country_header" translatable="false">Country Alias</string>
    <string name="id_competitor_header" translatable="false">Competitors</string>
    <string name="win_loss" translatable="false">Result</string>
    <string name="id_outcome" translatable="false">Outcome</string>
    <string name="country_page_name" translatable="false">Select Your Country</string>
    <string name="schedule_page_name" translatable="false">Schedule</string>
    <string name="list_tasks_noitem_msg" translatable="false">No Competitors from the Selected Country</string>
    <string name="list_tasks_olymperror_msg" translatable="false">Events have not been scheduled yet. Please visit once Olympics have started.</string>

    <string name="upgrade_str" translatable="false">Upgrade</string>
    <string name="medaltally_update_timestamp" translatable="false">Last Updated : %1$s</string>
    <string name="id_error_server" translatable="false">We had a problem retrieving information. Do you want to try again?</string>
    <string name="id_error_internet" translatable="false">No network connection, please try again.</string>


    <!--App Info String -->
    <string name="title_activity_app_info" translatable="false">Settings</string>
    <string name="contact_us_string" translatable="false">Contact us</string>
    <string name="rate_app_string" translatable="false">Rate Olympics 2016</string>
    <string name="share_app_string" translatable="false">Share Olympics 2016</string>
    <string name="sportradar_info" translatable="false">Data by Sportradar US</string>

    <string name="athlete_search_hint" translatable="false">Athlete name/Sports name</string>
    <string name="no_events_for_country" translatable="false">Your country is not participating in any event on this day.</string>
    <string name="no_sports" translatable="false">This event has not been officially scheduled yet. Please revisit again once it starts.</string>
    <string name="olympics_not_start" translatable="false">Although Olympics are yet to start..\nThis is test data to provide you with the features you can look forward to! </string>

    <string name="no_medal_won_msg" translatable="false">"Your country has not won any medals yet."</string>
    <string name="country_with_medal_msg" translatable="false">"Congratulations on wins! Click on your country to get details!"</string>
    <string name="id_settings" translatable="false">Settings</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9351787052838045/4767585817</string>
    <string name="time_settings" translatable="false">Do you want 24 hour time format?</string>
    <string name="id_local_timeZone" translatable="false">All times are in local country timezone.</string>
    <string name="title_activity_reminder_settings" translatable="false">Reminder Settings</string>
    <string name="id_reminder_time_msg" translatable="false">Reminder will be triggered 5 minutes before the event
        .</string>
    <string name="id_reminder_tip">You can click on schedule icon on the unit title, to set reminder for the event.</string>
    <string name="id_tip_title" translatable="false">Reminder Tip</string>
    <string name="id_set_alarm">Click to set reminder for</string>
</resources>
