<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="0.50dp">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/id_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_country_name_header"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/id_country_header"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_number_rounds_header"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/number_rounds"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_score_header"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/score_txt"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_rank_header"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/current_rank"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="20dip">

                <ImageView
                    android:id="@+id/id_country_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/id_country_alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="20dip"
                    android:textColor="#000000" />

            </RelativeLayout>

            <TextView
                android:id="@+id/id_number_rounds"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="20dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_score"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_rank"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>

</android.support.v7.widget.CardView>