<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/id_indh2h_cardview"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@android:color/white"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/id_headers"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_athlete_name_header"
                android:layout_span="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="11dp"
                android:text="@string/id_competitor_header"
                android:textColor="#000000" />

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_score_header"
                android:layout_span="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="11dp"
                android:text="@string/score_txt"
                android:textColor="#000000" />

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_outcome_header"
                android:layout_span="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="11dp"
                android:text="@string/outcome_txt"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_athlete_name"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:padding="5dp"
                android:textColor="@color/athlete_color" />
            <com.olympics.olympicsandroid.view.customView.GothamBoldTextView
                android:id="@+id/id_score"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="#000000" />

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_outcome"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:padding="5dp"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_athlete_name_1"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:padding="5dp"
                android:textColor="@color/athlete_color" />

            <com.olympics.olympicsandroid.view.customView.GothamBoldTextView
                android:id="@+id/id_score_1"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="#000000" />


            <com.olympics.olympicsandroid.view.customView.GothamBookTextView
                android:id="@+id/id_outcome_1"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:padding="5dp"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>

</android.support.v7.widget.CardView>